#354 - Added properties for the refresh request too.